Function Scope, Block Scope.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <!-- <script src="./Part1-Basics/hello.js"></script> -->
     <!-- <script src="./Part1-Basics/variables.js"></script> -->
+    <!-- <script src="./Part1-Basics/variablenaming.js"></script>  -->
+    <script src="./Part1-Basics/variablescope.js"></script>
 </body>
 </html>
