Important string methods.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="./Part1-Basics/hello.js"></script> -->
     <!-- <script src="./Part1-Basics/variables.js"></script> -->
     <!-- <script src="./Part1-Basics/variablenaming.js"></script>  -->
-    <script src="./Part1-Basics/variablescope.js"></script>
+    <!-- <script src="./Part1-Basics/variablescope.js"></script> -->
+    <script src="./Part1-Basics/string.js"></script>
 </body>
 </html>
