--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="./Part1-Basics/variables.js"></script> -->
     <!-- <script src="./Part1-Basics/variablenaming.js"></script>  -->
     <!-- <script src="./Part1-Basics/variablescope.js"></script> -->
-    <script src="./Part1-Basics/string.js"></script>
+    <!-- <script src="./Part1-Basics/string.js"></script> -->
+    <script src="./Part1-Basics/undefined.js"></script>
 </body>
 </html>
