--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- <script src="./Part1-Basics/variablenaming.js"></script>  -->
     <!-- <script src="./Part1-Basics/variablescope.js"></script> -->
     <!-- <script src="./Part1-Basics/string.js"></script> -->
-    <script src="./Part1-Basics/undefined.js"></script>
+    <!-- <script src="./Part1-Basics/nullvsundefined.js"></script> -->
+    <script src="./Part1-Basics/comparisonoperator.js"></script>
 </body>
 </html>
