--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- <script src="./Part1-Basics/variablescope.js"></script> -->
     <!-- <script src="./Part1-Basics/string.js"></script> -->
     <!-- <script src="./Part1-Basics/nullvsundefined.js"></script> -->
-    <script src="./Part1-Basics/comparisonoperator.js"></script>
+    <!-- <script src="./Part1-Basics/comparisonoperator.js"></script> -->
+    <!-- <script src="./Part1-Basics/andoroperator.js"></script> -->
+    <script src="./Part1-Basics/conditionalstatment.js"></script>
 </body>
 </html>
