--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="./Part1-Basics/nullvsundefined.js"></script> -->
     <!-- <script src="./Part1-Basics/comparisonoperator.js"></script> -->
     <!-- <script src="./Part1-Basics/andoroperator.js"></script> -->
-    <script src="./Part1-Basics/conditionalstatment.js"></script>
+    <!-- <script src="./Part1-Basics/conditionalstatment.js"></script> -->
+        <script src="./Part1-Basics/loop.js"></script>
 </body>
 </html>
