--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- <script src="./Part1-Basics/comparisonoperator.js"></script> -->
     <!-- <script src="./Part1-Basics/andoroperator.js"></script> -->
     <!-- <script src="./Part1-Basics/conditionalstatment.js"></script> -->
-        <script src="./Part1-Basics/loop.js"></script>
+        <!-- <script src="./Part1-Basics/loop.js"></script> -->
+        <script src="./Part1-Basics/array.js"></script>
 </body>
 </html>
