object, nested destructuring, spread operator.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- <script src="./Part1-Basics/andoroperator.js"></script> -->
     <!-- <script src="./Part1-Basics/conditionalstatment.js"></script> -->
         <!-- <script src="./Part1-Basics/loop.js"></script> -->
-        <script src="./Part1-Basics/array.js"></script>
+        <!-- <script src="./Part1-Basics/array.js"></script> -->
+        <!-- <script src="./Part1-Basics/object.js"></script> -->
+        <!-- <script src="./Part1-Basics/spreadoperator.js"></script> -->
+        <script src="./Part1-Basics/nesteddestructuring.js"></script>
 </body>
 </html>
