arrow func, hoisting, lexica scope.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <!-- <script src="./Part1-Basics/array.js"></script> -->
         <!-- <script src="./Part1-Basics/object.js"></script> -->
         <!-- <script src="./Part1-Basics/spreadoperator.js"></script> -->
-        <script src="./Part1-Basics/nesteddestructuring.js"></script>
+        <!-- <script src="./Part1-Basics/nesteddestructuring.js"></script> -->
+        <!-- <script src="./Part1-Basics/function.js"></script> -->
+        <script src="./Part1-Basics/arrowfunc.js"></script>
 </body>
 </html>
