--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>Learning Javascript</h2>
     <!-- <script src="./Part1-Basics/hello.js"></script> -->
     <!-- <script src="./Part1-Basics/variables.js"></script> -->
     <!-- <script src="./Part1-Basics/variablenaming.js"></script>  -->
